tests/ui/const-generics/issues/issue-71169.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71169.rs:5:43
   |
LL | fn foo<const LEN: usize, const DATA: [u8; LEN]>() {}
   |                                           ^^^ the type must not depend on the parameter `LEN`

error: `[u8; LEN]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-71169.rs:5:38
   |
LL | fn foo<const LEN: usize, const DATA: [u8; LEN]>() {}
   |                                      ^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0770`.
